--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Something New</title>
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Something New</title>
+    <script src="https://kit.fontawesome.com/f32d091022.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/main.css" />
+    <link
+      rel="shortcut icon"
+      href="images/icons/project-management.png"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
+    <!-- Header Section -->
+    <header class="header">
+      <img src="images/banner/banner1.png" alt="main banner" class="banner"/>
+      <article class="header-article">
+        <h1 class="title-header">All Thinks Are Possible If You believe</h1>
+        <p class="description-header">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+        <button class="btn-header">Contact Us</button>
+      </article>
+    </header>
+    <!-- Main Section -->
+    <main class="main">
+      <section class="my-failure-wrapper">
+        <article class="failure-img">
+          <img src="images/person.png" alt="sad mode photo">
+        </article>
+        <article>
+          <h2 class="failure-title">My failures of previous year</h2>
+          <p class="failure-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+          <ul class="failure-reason-list">
+            <li><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</li>
+            <li><i class="fa-solid fa-check"></i> &nbsp;Contrary to popular belief.</li>
+            <li> <i class="fa-solid fa-check"></i> &nbsp;Contrary to popular , is not simply.</li>
+            <li> <i class="fa-solid fa-check"></i> &nbsp;Contrary to popular belief, is not simply.</li>
+            <li> <i class="fa-solid fa-check"></i> &nbsp;Contrary to popular simply.</li>
+          </ul>
+        </article>
+    </main>
+
+    </section>
+  </body>
 </html>
