added positive vive section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,35 @@
           </ul>
         </article>
       </section>
+      <section class="plans">
+        <h2 class="plan-title">My Plans</h2>
+        <section class="plans-wrapper">
+          <article>
+            <img src="images/icons/web.png" alt="web" class="plans-image">
+            <h3 class="plan-sub-title">Web Development</h3>
+            <p class="plan-description">I want to start</p>
+          </article>
+          <article>
+            <img src="images/icons/js.png" alt="javascript" class="plans-image">
+            <h3 class="plan-sub-title">Javascript</h3>
+            <p class="plan-description">I want to learn</p>
+          </article>
+          <article>
+            <img src="images/icons/smoke.png" alt="stop smoking" class="plans-image">
+            <h3 class="plan-sub-title">Smoking Habit</h3>
+            <p class="plan-description">I want to end</p>
+          </article>
+          <article>
+            <img src="images/icons/ecom.png" alt="shopping side build" class="plans-image">
+            <h3 class="plan-sub-title">ecommerce</h3>
+            <p class="plan-description">I want to develop</p>
+          </article>
+        </section>
+      </section>
+      <section class="poitive-vive">
+        <h2 class="positive-title">Awlays keep a positive mindset</h2>
+        <button>call now</button>
+      </section>
     </main>
 
     
