modify hero section and complete postive vive section

--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@
   <body>
     <!-- Header Section -->
     <header class="header">
-      <img src="images/banner/banner1.png" alt="main banner" class="banner"/>
-      <article class="header-article">
-        <h1 class="title-header">All Thinks Are Possible If You believe</h1>
-        <p class="description-header">
-          There are many variations of passages of Lorem Ipsum available, but
-          the majority have suffered alteration in some form, by injected
-          humour, or randomised words
-        </p>
-        <button class="btn-header">Contact Us</button>
-      </article>
+      <section class="hero-section">
+        <article class="header-article">
+          <h1 class="title-header">All Thinks Are Possible If You believe</h1>
+          <p class="description-header">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+          <button class="btn-header">contact us</button>
+        </article>
+      </section>
     </header>
     <!-- Main Section -->
     <main class="main">
@@ -72,7 +69,7 @@
       </section>
       <section class="poitive-vive">
         <h2 class="positive-title">Awlays keep a positive mindset</h2>
-        <button>call now</button>
+        <button class="btn-positive-vive">call now</button>
       </section>
     </main>
 
