spelling correctio of positve-vive class

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </article>
         </section>
       </section>
-      <section class="poitive-vive">
+      <section class="positive-vive">
         <h2 class="positive-title">Awlays keep a positive mindset</h2>
         <button class="btn-positive-vive">call now</button>
       </section>
