--- a/index.html
+++ b/index.html
@@ -72,7 +72,34 @@
         <button class="btn-positive-vive">call now</button>
       </section>
     </main>
-
+    <footer class="footer">
+      <section class="footer-wrapper">
+        <article>
+          <h3 class="footer-title">Future</h3>
+          <br>
+          <p class="footer-sub-title">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+          <br>
+          <p class="email">Email : info@gmail.com</p>
+          <br>
+          <p class="phone">Phone : 01500 00 00 00</p>
+          <br>
+          <a href=""><img src="images/icons/fb.png" alt="facebook"></a>
+          &nbsp;
+          <a href=""><img src="images/icons/twitter.png" alt="twitter"></a>
+          &nbsp;
+          <a href=""><img src="images/icons/youtube.png" alt="youtube"></a>
+        </article>
+        <article>
+          <h3 class="form-title">Subscribe</h3>
+          <br>
+          <form action="">
+            <input type="email" name="" id="" placeholder="input your email" class="input-footer">
+            <br>
+            <input type="submit" value="subscribe" class="btn-subscribe">
+          </form>
+        </article>
+      </section>
+    </footer>
     
   </body>
 </html>
